fix spelling in synthetic_lover es blog, added project8 en and es
Changes to be committed:
	modified:   es/blogs/synthetic_lover.html
	new file:   es/projects/inverted_wheeled_pendulum_train.html
	new file:   projects/inverted_wheeled_pendulum_train.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project8/RL_train.gif
	new file:   src/project_posts/project8/RL_train_2.gif
	new file:   src/project_posts/project8/a_1.png
	new file:   src/project_posts/project8/a_2.png
	new file:   src/project_posts/project8/a_3.png
	new file:   src/project_posts/project8/a_4.png
	new file:   src/project_posts/project8/adobe_render.jpg
	new file:   src/project_posts/project8/behaviors.gif
	new file:   src/project_posts/project8/card.png
	new file:   src/project_posts/project8/chancla.gif
	new file:   src/project_posts/project8/house_1.png
	new file:   src/project_posts/project8/house_2.png
	new file:   src/project_posts/project8/house_nav.gif
	new file:   src/project_posts/project8/intro.gif
	new file:   src/project_posts/project8/map.png
	new file:   src/project_posts/project8/sensors.gif
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/es/blogs/synthetic_lover.html
+++ b/es/blogs/synthetic_lover.html
@@ -5,16 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>Magical Enginering</title>
-    <meta name="title" content="Magical Enginering" />
-    <meta
-      name="description"
-      content="Con la difuminación entre fantasía y realidad, emergen nuevos compañeros sexuales artificiales, desafiando nuestras relaciones y deseos." />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-      crossorigin="anonymous" />
+    <title>Magical Engineering</title>
+    <meta name="title" content="Magical Engineering" />
+    <meta name="description" content="Con la difuminación entre fantasía y realidad, emergen nuevos compañeros sexuales artificiales, desafiando nuestras relaciones y deseos." />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="/src/css/style.css" />
     <link rel="stylesheet" href="/src/css/utilities.css" />
     <link rel="stylesheet" href="/src/css/blog_posts.css" />
@@ -22,137 +16,44 @@
   </head>
   <body>
     <header id="hero">
-      <!-- Navbar -->
       <div id="navbar-placeholder"></div>
-
       <div id="content-blog">
-        <h1 class="massiveHeading">Amantes Sintéticos: Una Nueva era en la
-          Exploración Sexual</h1>
+        <h1 class="massiveHeading">Amantes Sintéticos: Una Nueva Era en la Exploración Sexual</h1>
         <p class="categories">
           <span class="category">AI</span>
         </p>
 
-        <h2 class="subtitle">A medida que la línea entre la ficción y la
-          realidad se hacen borrosas, una nueva generación
-          de acompañantes sexuales artificiales emerge.
-          Cuáles son los impactos de esto en nuestras
-          relaciones, deseos, y nuestro entendimiento de
-          que significa ser humano?</h2>
+        <h2 class="subtitle">A medida que la línea entre la ficción y la realidad se hace borrosa, una nueva generación de acompañantes sexuales artificiales emerge. ¿Cuáles son los impactos de esto en nuestras relaciones, deseos y nuestro entendimiento de qué significa ser humano?</h2>
 
-        <img class="gif" src="/src/blog_posts/blog2/cyberlover3.png"
-          alt="Isaac Sim Deep Learning simmulation with Kaya">
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover3.png" alt="Isaac Sim Deep Learning simulation with Kaya">
 
-        <p>Las interacciones sexuales con seres artificiales han sido un tema
-          controvertido durante algún tiempo, pero ¿Qué hay más allá de lo
-          aparente? <a
-            href="https://link.springer.com/chapter/10.1007/978-3-030-19734-6_1"
-            target="_blank">Investigadores proponen</a>
-          que las personas tienden a
-          responder a los acompañantes artificiales casi de la misma manera que
-          responderían a otros humanos. Para entender mejor este fenómeno,
-          debemos adentrarnos en el mundo de la psicología y la tecnología.</p>
+        <p>Las interacciones sexuales con seres artificiales han sido un tema controvertido durante algún tiempo, pero ¿qué hay más allá de lo aparente? <a href="https://link.springer.com/chapter/10.1007/978-3-030-19734-6_1" target="_blank">Investigadores proponen</a> que las personas tienden a responder a los acompañantes artificiales casi de la misma manera que responderían a otros humanos. Para entender mejor este fenómeno, debemos adentrarnos en el mundo de la psicología y la tecnología.</p>
 
-        <p>Una teoría que intenta capturar todos los factores relevantes que
-          contribuyen o reducen la ilusión de las interacciones sexuales reales
-          con amantes basados en tecnología es la
-          "ilusión de interacción sexual". Según esta teoría, los usuarios
-          podrían responder automáticamente a las interacciones sexuales
-          artificiales como lo harían con sus contrapartes de la vida real, a
-          pesar de saber conscientemente que solo están interactuando con
-          algo artificial. Este fenómeno puede explicarse por la teoría de la
-          ecuación de los medios, que propone que los humanos tienden a tratar a
-          las máquinas, como computadoras y robots, como si fueran personas
-          reales, asignándole categorias sociales basados en los estereotipos
-          que las máquinas evocan en la persona.</p>
+        <p>Una teoría que intenta capturar todos los factores relevantes que contribuyen o reducen la ilusión de las interacciones sexuales reales con amantes basados en tecnología es la "ilusión de interacción sexual". Según esta teoría, los usuarios podrían responder automáticamente a las interacciones sexuales artificiales como lo harían con sus contrapartes de la vida real, a pesar de saber conscientemente que solo están interactuando con algo artificial. Este fenómeno puede explicarse por la teoría de la ecuación de los medios, que propone que los humanos tienden a tratar a las máquinas, como computadoras y robots, como si fueran personas reales, asignándoles categorías sociales basadas en los estereotipos que las máquinas evocan en la persona.</p>
 
-        <img class="gif" src="/src/blog_posts/blog2/cyberlover1.png"
-          alt="Isaac Sim Deep Learning simmulation with Kaya">
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover1.png" alt="Isaac Sim Deep Learning simulation with Kaya">
 
-        <p>Esta tendencia puede llevar a una difuminación de las líneas entre la
-          realidad y la fantasía, lo cual es particularmente relevante en el
-          contexto de las interacciones sexuales con acompañantes artificiales.
-          La "suspensión voluntaria de la incredulidad" es un concepto que
-          caracteriza
-          la voluntad de las personas para aceptar y mantener la ilusión de
-          estar
-          interactuando con alguien real en vez de un ser artificial (inclusive
-          si se sabe lo contrario por medio de la razón), esto nos permite
-          sumergirnos
-          completamente en un mundo o escenario ficticio, y en este caso, puede
-          conducir al usuario a una experiencia física y emocional más
-          intensa.</p>
+        <p>Esta tendencia puede llevar a una difuminación de las líneas entre la realidad y la fantasía, lo cual es particularmente relevante en el contexto de las interacciones sexuales con acompañantes artificiales. La "suspensión voluntaria de la incredulidad" es un concepto que caracteriza la voluntad de las personas para aceptar y mantener la ilusión de estar interactuando con alguien real en vez de un ser artificial (inclusive si se sabe lo contrario por medio de la razón). Esto nos permite sumergirnos completamente en un mundo o escenario ficticio, y en este caso, puede conducir al usuario a una experiencia física y emocional más intensa.</p>
 
-        <p>Sin embargo, también hay riesgos potenciales asociados con el uso de
-          compañeros artificiales para fines sexuales. Estos incluyen la
-          posibilidad de explotación o abuso, así como el riesgo de depender
-          emocionalmente de la tecnología. El concepto de "ajuste a la realidad"
-          es crucial aquí, donde los estereotipos dados al máquina por las
-          expectativas del usuario deben ser en concordancia con su propio
-          script sexual. Si el usuario se siente que puede desviarse de estas
-          normas, pueden haber conflictos para crear y mantener la suspensión de
-          la incredulidad.</p>
+        <p>Sin embargo, también hay riesgos potenciales asociados con el uso de compañeros artificiales para fines sexuales. Estos incluyen la posibilidad de explotación o abuso, así como el riesgo de depender emocionalmente de la tecnología. El concepto de "ajuste a la realidad" es crucial aquí, donde los estereotipos dados a la máquina por las expectativas del usuario deben estar en concordancia con su propio guion sexual. Si el usuario siente que puede desviarse de estas normas, pueden surgir conflictos para crear y mantener la suspensión de la incredulidad.</p>
 
-        <p>Las señales para este proceso pueden ser tanto verbales como no
-          verbales,
-          donde la respuesta del usuario es recíproca si las señales adecuadas
-          estan presentes.
-          Sin embargo, Hasta que punto es así?Si consideramos el mundo de la
-          pronografía dibujada
-          como el manda, o el hentai, es posible decir que las señales no tienen
-          por que siquiera
-          ser realistas, dando paso al uso de representaciones más
-          abstractas.</p>
+        <p>Las señales para este proceso pueden ser tanto verbales como no verbales, donde la respuesta del usuario es recíproca si las señales adecuadas están presentes. Sin embargo, ¿hasta qué punto es así? Si consideramos el mundo de la pornografía dibujada como el manga o el hentai, es posible decir que las señales no tienen por qué siquiera ser realistas, dando paso al uso de representaciones más abstractas.</p>
 
-        <img class="gif" src="/src/blog_posts/blog2/cyberlover2.png"
-          alt="Isaac Sim Deep Learning simmulation with Kaya">
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover2.png" alt="Isaac Sim Deep Learning simulation with Kaya">
 
-        <p>El modelo de "ilusión de interacción sexual" tiene como base la idea
-          de que la percepción de elementos sexuales por parte de los usuarios
-          genera exitación sexual. Esta idea nos puede llevar a la coclusió de
-          que los acompañantes artificiales pueden lograr mejor y/o más
-          facilmente un ajuste entre sus señales verbales y no verbales con
-          las preferencias del usario.</p>
+        <p>El modelo de "ilusión de interacción sexual" tiene como base la idea de que la percepción de elementos sexuales por parte de los usuarios genera excitación sexual. Esta idea nos puede llevar a la conclusión de que los acompañantes artificiales pueden lograr mejor y/o más fácilmente un ajuste entre sus señales verbales y no verbales con las preferencias del usuario.</p>
 
-        <p>A pesar de todos los posibles beneficios, siempre hay riesgos y
-          problemas
-          asociados a este tipo de uso de la tecnología. Si consideramos que, en
-          nuestra condición humana, vemos el mundo no como es, sino como somos,
-          siempre el humano, en su actuar en el mundo, reflejará tanto sus
-          fortalezas
-          como su debilidades. Por lo que es entendible que siempre hayan grupos
-          que se opongan al uso de seres artificiales para placer sexual, dado
-          que
-          siempre existirán personal que realicen prácticas peligrosas e
-          inmorales.</p>
+        <p>A pesar de todos los posibles beneficios, siempre hay riesgos y problemas asociados a este tipo de uso de la tecnología. Si consideramos que, en nuestra condición humana, vemos el mundo no como es, sino como somos, siempre el humano, en su actuar en el mundo, reflejará tanto sus fortalezas como sus debilidades. Por lo que es entendible que siempre haya grupos que se opongan al uso de seres artificiales para placer sexual, dado que siempre existirán personas que realicen prácticas peligrosas e inmorales.</p>
 
-        <h3>Conclución</h3>
+        <h3>Conclusión</h3>
 
-        <p>Sin embargo, estos comportamientos comienzan con el propio usuario.
-          Asignamos categorías
-          sociales y estereotipos personales a las máquinas y actuamos en
-          consecuencia. La raíz del problema siempre es humana. Por otro lado,
-          estas interacciones también pueden liberarnos de las normas y juicios
-          sociales, permitiendo una exploración segura y libre. Este blog se
-          centran en las
-          interacciones sexuales, pero los mismos mecanismos se aplican a otros
-          tipos de necesidades. Si las máquinas están diseñadas adecuadamente,
-          pueden fomentar el desarrollo human, ayudandonos a explorar nuestros
-          deseos, lo que nos gustaría ser o lograr; un acompañante artificial
-          romántico puede aislarnos y hacernos emocionalmente dependientes de
-          este
-          por motivos de lucro, o puede enseñarnos en infinitos escenarios cómo
-          tener relaciones saludables y felices, motivándoos a convertirnos en
-          mejores versiones de nosotros mismos. Solo el tiempo dirá qué
-          dirección tomará la humanidad.</p>
+        <p>Sin embargo, estos comportamientos comienzan con el propio usuario. Asignamos categorías sociales y estereotipos personales a las máquinas y actuamos en consecuencia. La raíz del problema siempre es humana. Por otro lado, estas interacciones también pueden liberarnos de las normas y juicios sociales, permitiendo una exploración segura y libre. Este blog se centra en las interacciones sexuales, pero los mismos mecanismos se aplican a otros tipos de necesidades. Si las máquinas están diseñadas adecuadamente, pueden fomentar el desarrollo humano, ayudándonos a explorar nuestros deseos, lo que nos gustaría ser o lograr; un acompañante artificial romántico puede aislarnos y hacernos emocionalmente dependientes de este por motivos de lucro, o puede enseñarnos en infinitos escenarios cómo tener relaciones saludables y felices, motivándonos a convertirnos en mejores versiones de nosotros mismos. Solo el tiempo dirá qué dirección tomará la humanidad.</p>
 
-        <p><b><i>"Casi todos quieren a alguien a quien amar, pero muchas personas no tienen a nadie. Si este deseo natural puede satisfacerse para todos los que son capaces de hacerlo, seguramente el mundo sería un lugar mucho más feliz. Muchos que de otro modo se habrían convertido en inadaptados sociales, marginados, o incluso algo peor, serán en cambio seres humanos más balanceados."</i></b></p>
+        <p><b><i>"Casi todos quieren a alguien a quien amar, pero muchas personas no tienen a nadie. Si este deseo natural puede satisfacerse para todos los que son capaces de hacerlo, seguramente el mundo sería un lugar mucho más feliz. Muchos que de otro modo se habrían convertido en inadaptados sociales, marginados o incluso algo peor, serán en cambio seres humanos más equilibrados."</i></b></p>
 
       </div>
       <div class="division-space-only"></div>
-
-      <!-- Footer -->
       <div id="footer-placeholder"></div>
-
       <script src="/src/js/navbar_footer.js"></script>
     </body>
-  </html>
+</html>
