--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -31,6 +31,17 @@
 
             <article class="project">
 
+                <!-- Project 8 -->
+                <div class="card project8"
+                    onclick="window.location.href = '/projects/rovver_x_130.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>This robot can navigate while keeping its balance</h3>
+                            <p>Design and simulation of a two-wheeled inverted pendulum trained using reinforcement learning in NVIDIA Isaac Lab to maintain balance and navigate. This project is a collaboration with a master's candidate from the Institute of Smart Systems and Artificial Intelligence, Nazarbayev University</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 7 -->
                 <div class="card project7"
                     onclick="window.location.href = '/projects/rovver_x_130.html'">
