--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -31,6 +31,17 @@
 
             <article class="project">
 
+                <!-- Project 8 -->
+                <div class="card project8"
+                    onclick="window.location.href = '/projects/rovver_x_130.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Este robot puede navegar mientras mantiene el equilibrio</h3>
+                            <p>Diseño y simulación de un péndulo invertido de dos ruedas entrenado con aprendizaje por refuerzo en NVIDIA Isaac Lab para mantener el equilibrio y navegar. Este proyecto es una colaboración con un estudiante de maestría del Institute of Smart Systems and Artificial Intelligence, Nazarbayev University.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Proyecto 7 -->
                 <div class="card project7"
                     onclick="window.location.href = '/es/projects/rovver_x_130.html'">
