--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -33,7 +33,7 @@
 
                 <!-- Project 8 -->
                 <div class="card project8"
-                    onclick="window.location.href = '/projects/rovver_x_130.html'">
+                    onclick="window.location.href = '/projects/inverted_wheeled_pendulum_train.html'">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Este robot puede navegar mientras mantiene el equilibrio</h3>
