project 9 added en es
Changes to be committed:
	new file:   es/projects/asd_robot.html
	new file:   projects/asd_robot.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project9/1.png
	new file:   src/project_posts/project9/10.png
	new file:   src/project_posts/project9/11.png
	new file:   src/project_posts/project9/2.png
	new file:   src/project_posts/project9/3.png
	new file:   src/project_posts/project9/4.png
	new file:   src/project_posts/project9/5.png
	new file:   src/project_posts/project9/6.png
	new file:   src/project_posts/project9/7.png
	new file:   src/project_posts/project9/8.png
	new file:   src/project_posts/project9/9.png
	new file:   src/project_posts/project9/c.jpg
	new file:   src/project_posts/project9/d.jpg
	new file:   src/project_posts/project9/i.jpg
	new file:   src/project_posts/project9/introv2.png
	new file:   src/project_posts/project9/r.jpg
	new file:   src/project_posts/project9/s.jpg
	new file:   src/project_posts/project9/v.jpg
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -154,6 +154,18 @@
                     </div>
                 </div>
 
+                <!-- Project 9 -->
+                <div class="card project9"
+                    onclick="window.location.href = '/projects/asd_robot.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Small Humanoid Robot for Interaction with Kids with Autism</h3>
+                            <p>More children are diagnosed with autism. This project explores how 
+                                technology can boost their social skills.</p>
+                        </div>
+                    </div>
+                </div>
+
             </article>
 
         </section>
