--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -149,6 +149,19 @@
                     </div>
                 </div>
 
+                <!-- Project 9 -->
+                <div class="card project9"
+                    onclick="window.location.href = '/projects/asd_robot.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Pequeño robot humanoide para la interacción con niños con autismo</h3>
+                            <p>Cada vez se diagnostica a más niños con autismo. Este proyecto explora cómo 
+                                la tecnología puede potenciar sus habilidades sociales.</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </article>
 
         </section>
