Project 10 - Lim2n added esp and en versions
Changes to be committed:
	new file:   es/projects/lim2n.html
	new file:   projects/lim2n.html
	modified:   src/css/blog_posts.css
	modified:   src/css/dialogue.css
	new file:   src/project_posts/project10/intro_1.png
	new file:   src/project_posts/project10/intro_2.png
	new file:   src/project_posts/project10/intro_img.png
	new file:   src/project_posts/project10/re_1.png
	new file:   src/project_posts/project10/re_2.png
	new file:   src/project_posts/project10/re_3.png
	new file:   src/project_posts/project10/re_4.png
	new file:   src/project_posts/project10/re_5.png
	new file:   src/project_posts/project10/sr_1.png
	new file:   src/project_posts/project10/sr_2.png
	new file:   src/project_posts/project10/sr_3.png
	new file:   src/project_posts/project10/sr_4.gif
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -31,6 +31,17 @@
 
             <article class="project">
 
+                <!-- Project 10 -->
+                <div class="card project10"
+                    onclick="window.location.href = '/projects/lim2n.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Robots That Understand and Follow Human Instructions</h3>
+                            <p>An experiment where I used LLMs to reason over semantic maps, generate paths, and control a Jetbot robot using PD. The key? A good prompt.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 8 -->
                 <div class="card project8"
                     onclick="window.location.href = '/projects/inverted_wheeled_pendulum_train.html'">
