--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -31,9 +31,21 @@
 
             <article class="project">
 
+                <!-- Project 10 -->
+                <div class="card project10"
+                    onclick="window.location.href = '/es/projects/lim2n.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Robots que entienden instrucciones humanas (y las siguen)</h3>
+                            <p>Un experimento donde usé LLMs para razonar sobre mapas semánticos, generar rutas y
+        controlar un robot Jetbot con PD. ¿La clave? Un buen prompt.</p>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Project 8 -->
                 <div class="card project8"
-                    onclick="window.location.href = '/projects/inverted_wheeled_pendulum_train.html'">
+                    onclick="window.location.href = '/es/projects/inverted_wheeled_pendulum_train.html'">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Este robot puede navegar mientras mantiene el equilibrio</h3>
