minor translation fix en version
Changes to be committed:
	modified:   projects/lim2n.html

--- a/projects/lim2n.html
+++ b/projects/lim2n.html
@@ -92,7 +92,7 @@ A long title that basically means: you can give orders to a robot using text and
 
       <img src="/src/project_posts/project10/sr_1.png" alt="Isaac Sim research diagram">
 
-      <p>Así luce la interfaz de usuario en Isaac Sim:</p>
+      <p>This is what the user interface looks like in Isaac Sim:</p>
 
       <img src="/src/project_posts/project10/sr_2.png" alt="Isaac Sim research diagram">
       <img src="/src/project_posts/project10/sr_3.png" alt="Isaac Sim research diagram">
